# tp_c_cpp_iz2

./: .travis.yml  CMakeLists.txt  README.md
lib/consistent/: consistent.c  consistent.h
lib/parallel/: parallel.c  parallel.h
src/: main.c
test/: CMakeLists.txt  test.cpp
